# crewAI

cleya_marketing_crew/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
cleya_marketing_crew/src/cleya_marketing_crew/: __init__.py  crew.py  main.py
cleya_marketing_crew/src/cleya_marketing_crew/config/: agents.yaml  tasks.yaml
cleya_marketing_crew/src/cleya_marketing_crew/tools/: __init__.py  custom_tool.py
